[tool.poetry]
package-mode = false

[project]
name = "ezwhelp-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Achyuth",email = "achyuthrayal2@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.129.1,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-cov = "^5.0.0"
pynguin = "^0.45.0"
httpx = "^0.28.1"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"